--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -17,5 +17,7 @@ spring:
       path: /h2-console       # http://localhost:8080/h2-console
 
 app:
+  backend-base-url: http://localhost:8080
+  frontend-base-url: http://localhost:5173
   qbo:
     bypass: true
